added DAO layer